Fix menu indicator alignment issue

--- a/src/common/style.css
+++ b/src/common/style.css
@@ -243,6 +243,7 @@ img {
 
 .menu-event-indicator {
     font-size: 10px;
+    font-family: monospace;
 }
 
 .matches-submenu {
